# half-life

./: Dockerfile.puller  docker-compose.yml  ping_producer.py  pyproject.toml
avro_schemas/: pr_merge.avsc  pr_open.avsc
src/half_life/: puller.py
