[project]
name = "half-life"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp (>=3.12.14,<4.0.0)",
    "confluent-kafka[avro] (>=2.11.0,<3.0.0)",
    "fastavro (>=1.11.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cachetools (>=6.1.0,<7.0.0)",
    "authlib (>=1.6.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "half_life", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
